--- a/0_vanilla/app/src/main/res/layout/activity_main.xml
+++ b/0_vanilla/app/src/main/res/layout/activity_main.xml
@@ -43,6 +43,7 @@
             android:background="@drawable/round_button"
             android:backgroundTint="@color/white"
             android:padding="12dp"
+            android:textColor="#000"
             android:hint="Type Here"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
