--- a/1_api/app/src/main/res/layout/bot_msg_rv_item.xml
+++ b/1_api/app/src/main/res/layout/bot_msg_rv_item.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView
+    xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_gravity="end"
     android:layout_margin="8dp"
     android:elevation="8dp"
-    android:backgroundTint="#BFDBFE"
+    android:backgroundTint="#581C87"
     app:cardCornerRadius="12dp"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
@@ -17,20 +17,20 @@
         android:layout_height="wrap_content">
 
         <ImageView
-            android:id="@+id/iv_user"
-            android:src="@drawable/ic_baseline_person_24"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            android:id="@+id/iv_bot"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/iv_bot"
+            android:src="@drawable/ic_android_black_24dp"
             android:layout_width="24dp"
             android:layout_height="24dp"/>
 
         <TextView
-            android:id="@+id/tv_user"
-            android:textColor="#1E3A8A"
-            android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toStartOf="@id/iv_user"
+            android:id="@+id/tv_bot"
+            app:layout_constraintStart_toEndOf="@id/iv_bot"
             app:layout_constraintTop_toTopOf="parent"
-            tools:text="The quick brown fox jumps over the lazy dog"
+            android:textColor="#F5D0FE"
+            android:layout_marginStart="4dp"
+            tools:text="The quick brown fox jumps over the lazy dog The quick brown fox jumps over the lazy dogThe quick brown fox jumps over the lazy dog"
             android:layout_width="0dp"
             android:layout_height="wrap_content"/>
 
